# jarvis-ai-workbench

./: README.md  pyproject.toml  requirements.txt  start.sh
config/: jarvis-ai.yaml  prompts.yaml
src/jarvis_ai_workbench/: app.py  config_store.py  prompt_store.py  schemas.py
tests/: test_app.py
