[build-system]
requires = ["setuptools>=56", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai-workbench"
version = "0.1.0"
description = "UI workbench for Jarvis prompt engineering and model settings"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
